package logic;

public enum Direction {
    SE,
    SW,
    NE,
    NW,
    N,
    S,
    W,
    E,
    STATIC
}
