package logic.blocks;

public enum BlockType {
    MIRROR,
    GLASS,
    CRYSTAL,
    NOT,
    EMPTY,
    FIXED_OPAQUE,
    MOBILE_OPAQUE,
}
