package logic.blocks;

public enum SideType {
    LEFT,
    RIGHT,
    UPPER,
    LOWER;
}
